--- a/calculate_loadshedding_accracy.ipynb
+++ b/calculate_loadshedding_accracy.ipynb
@@ -20,19 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Accuracy': 0.33104395604395603,\n",
-       " 'recall': 0.7964071856287425,\n",
-       " 'f1_score': 0.15402431962941518,\n",
-       " 'False Negatives': 34}"
+       "{'Accuracy': 0.38278388278388276,\n",
+       " 'recall': 0.7724550898203593,\n",
+       " 'f1_score': 0.16064757160647572,\n",
+       " 'False Negatives': 38}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,13 +40,14 @@
    "source": [
     "import pandas as pd\n",
     "from sklearn.metrics import accuracy_score, recall_score, f1_score, confusion_matrix\n",
+    "from data_ingestion import read_from_CSV\n",
     "\n",
     "# Load the datasets\n",
     "loadshedding_predicted_path = \"./loadshedding_pred.csv\"\n",
     "loadshedding_actual_path = \"./loadshedding_jan_mar_2024.csv\"\n",
     "\n",
-    "loadshedding_pred = pd.read_csv(loadshedding_predicted_path)\n",
-    "loadshedding_actual = pd.read_csv(loadshedding_actual_path)\n",
+    "loadshedding_pred = read_from_CSV(loadshedding_predicted_path)\n",
+    "loadshedding_actual = read_from_CSV(loadshedding_actual_path)\n",
     "\n",
     "# Ensure timestamps match properly\n",
     "loadshedding_pred['date_time'] = pd.to_datetime(loadshedding_pred['date_time'])\n",
