Column was no longer in the csv after the index was set to false while creating the file in  estimate_loadshedding_schedule

--- a/calculate_loadshedding_accracy.ipynb
+++ b/calculate_loadshedding_accracy.ipynb
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-16 08:06:43,881 - data_ingestion - INFO - CSV file read successfully from the path.\n",
+      "2025-02-16 08:06:43,893 - data_ingestion - INFO - CSV file read successfully from the path.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -32,7 +40,7 @@
        " 'False Negatives': 38}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +64,7 @@
     "# Merge datasets on date_time to align actual and predicted values\n",
     "merged_data = pd.merge(loadshedding_pred, loadshedding_actual, on=\"date_time\", how=\"left\")\n",
     "\n",
-    "merged_data.drop(columns=[\"Date\", \"Hour\", \"Unnamed: 0\"], inplace=True)\n",
+    "merged_data.drop(columns=[\"Date\", \"Hour\"], inplace=True)\n",
     "merged_data.columns = merged_data.columns.str.lower()\n",
     "merged_data[\"load_shedding\"] = merged_data[\"load_shedding_stage\"].apply(lambda x: 1 if x not in [\"Unknown\", \"No Load Shedding\"] else 0)\n",
     "\n",
